<b>Version 1.5.0:</b><br/><br/>
    &#8226; View users mentions and favorites on their profiles<br/>
    &#8226; View up to 100 retweeters of a status<br/>
    &#8226; Remade the tweet viewer layout<br/>
    &#8226; Changed the conversation and discussion style<br/>
    &#8226; Made a drawer item for saved searches<br/>
    &#8226; Opening notifications will now take you to the correct place<br/>
    &#8226; RTL support for languages that use it<br/>
    &#8226; Save and destroy saved searches<br/>
    &#8226; More Tweetmarker fixes<br/>
    &#8226; Better theme selection<br/>
    &#8226; Some optimizations<br/>
</br><br/>

<b>Version 1.4.4:</b><br/><br/>
    &#8226; Pwiccer support (https://play.google.com/store/apps/details?id=com.t3hh4xx0r.pwiccer&hl=en)<br/>
    &#8226; Mention retweeter when replying<br/>
    &#8226; Fixes for live streaming sometimes setting up multiple listeners causing duplicates<br/>
    &#8226; Open play store links to the play store<br/>
    &#8226; Clicking a "Saved Image" notification will take you to that image in the gallery<br/>
    &#8226; Search users from a web link<br/>
    &#8226; Play store crash fixes<br/>
    &#8226; Simple style changes to extra page setup<br/>
    &#8226; Random small reported bug fixes<br/>
    &#8226; Updated more translations<br/>
</br><br/>

<b>Version 1.4.3:</b><br/><br/>
    &#8226; Attempted fixes for TweetMarker<br/>
    &#8226; Translation updates<br/>
    &#8226; Crash fixes<br/>
</br><br/>

<b>Version 1.4.2:</b><br/><br/>
    &#8226; Fixes for Talon Pull with multiple accounts<br/>
    &#8226; Fixed duplicate tweets<br/>
    &#8226; Way better support for sharing and uploading images<br/>
    &#8226; Open statuses from a web link in talon<br/>
</br><br/>

<b>Version 1.4.1:</b><br/><br/>
    &#8226; Major speed improvements when viewing tweets, profiles, searches, lists, and other networked tasks<br/>