@@ -226,6 +226,12 @@
                   android:theme="@style/Theme.TalonDark" >
         </activity>
 
+        <activity android:name="com.klinker.android.twitter.ui.Version2Setup"
+            android:label="@string/app_name_full"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Theme.TalonDark" >
+        </activity>
+
         <activity android:name="com.klinker.android.twitter.ui.BrowserActivity"
             android:label="@string/app_name_full"
             android:theme="@style/Theme.TalonDark.Popup" >
