@@ -514,5 +514,14 @@
     <string name="delete_saved_search">Delete Saved Search</string>
     <string name="deleting_search">Deleting Search</string>
     <string name="none">None</string>
+    <string name="start">Start!</string>
+    <string name="version_two">Version 2</string>
+    <string name="cleaning_databases">Cleaning databases...</string>
+    <string name="setup_version_two">Lots has changed recently with Talon, and to make sure I can give you the best experience, we have to do some cleanup before heading into the app! \n\nThis could take some time depending on the number of tweets you store!</string>
+    <string name="setting_up_timeline">Setting up timeline...</string>
+    <string name="setting_up_mentions">Setting up mentions...</string>
+    <string name="setting_up_dms">Setting up direct messages...</string>
+    <string name="setting_up_lists">Setting up lists...</string>
+    <string name="version_two_setup_done">Done setting up Talon 2.0, enjoy!</string>
 
 </resources>
